--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/container.css">
     <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/section.css">
+    <link rel="stylesheet" href="css/tasks.css">
     <script src="js/script.js" defer></script>
     <title>Lista zadań</title>
 </head>
