--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/section.css">
     <link rel="stylesheet" href="css/tasks.css">
+    <link rel="icon" href="img/icon.jpg">
     <script src="js/script.js" defer></script>
     <title>Lista zadań</title>
 </head>
