--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/section.css">
     <link rel="stylesheet" href="css/tasks.css">
+    <link rel="stylesheet" href="css/buttons.css">
     <link rel="icon" href="img/icon.jpg">
     <script src="js/script.js" defer></script>
     <title>Lista zadań</title>
@@ -34,7 +35,12 @@
             </div>
         </section>
         <section class="section">
-            <h2 class="section__header">Lista zadań</h2>
+            <header class="section__header">
+            <h2 class="section__tittle">Lista zadań</h2>
+            <div class="buttons js-buttons">
+                <button class="buttons__button js-toggleHideDoneTasks">Ukryj ukończone</button>
+                <button class="buttons__button js-markAllDone">Ukończ wszystkie</button>
+            </div></header>
             <div class="section__body">
                 <ul class="tasks js-tasks"></ul>
             </div>
